--- a/Issues/环境搭建常见问题.md
+++ b/Issues/环境搭建常见问题.md
@@ -1,24 +1,23 @@
-一. 环境搭建 
+一. 环境搭建   
 php + apache + mysql 搭建
 
-
 二、遇到的问题
-1. apache 找不到msi文件 
-下载的文件有问题，更换链接：http://archive.apache.org/dist/httpd/binaries/win32/
+1. apache 找不到msi文件   
+下载的文件有问题，更换链接：http://archive.apache.org/dist/httpd/binaries/  win32/
 
-2. 不推荐在apache官网上下，网速太慢
+2. 不推荐在apache官网上下，网速太慢  
 
-3. 找不到apache的php扩展文件
-https://segmentfault.com/q/1010000005156917
+3. 找不到apache的php扩展文件  
+https://segmentfault.com/q/1010000005156917  
 需要装safe版本
 
-4. php7 无法搭配 apache2.2
-安装apache2.4
+4. php7 无法搭配 apache2.2  
+安装apache2.4  
 
-5. mysql中没有 my.ini文件，需要自行创建。
+5. mysql中没有 my.ini文件，需要自行创建。  
 
-6. 安装mysql服务出现Install/Remove of the Service Denied!错误
-http://tinypig.iteye.com/blog/368379
+6. 安装mysql服务出现Install/Remove of the Service Denied!错误  
+http://tinypig.iteye.com/blog/368379  
 
 三、参考教程
-* [Windows10 Apache2.4 PHP7 MySQL 5.7安装教程](https://segmentfault.com/a/1190000004993065)
+* [Windows10 Apache2.4 PHP7 MySQL 5.7安装教程](https://segmentfault.com/  a/1190000004993065)
