--- a/Notes/字符串加密解密.md
+++ b/Notes/字符串加密解密.md
@@ -28,12 +28,13 @@ function encryptDecrypt($data, $key, $decrypt = 0, $return_array = 1)
 ```
 
 ## 生成验证字段
+### 其他检验字段：appid、expire
 ```
 function makeSign($params, $key)
 {
-    if (isset($params['token']))
+    if (isset($params['sign']))
     {
-        unset($params['token']);
+        unset($params['sign']);
     }
     //签名步骤一：按字典序排序参数
     ksort($params);
@@ -47,6 +48,10 @@ function makeSign($params, $key)
     return $result;
 }
 ```
+
+## 其他说明
+对于用户的请求，最好生成不同的密钥
+
 ## 更多
 http://php.net/manual/zh/openssl.installation.php
 
