--- a/Networks/进程、线程、协程.md
+++ b/Networks/进程、线程、协程.md
@@ -5,6 +5,7 @@
 ## 线程
 1. 多线程模式致命的缺点就是任何一个线程挂掉都可能直接造成整个进程崩溃，因为所有线程共享进程的内存。
 2. 线程的实现可以分为两类：用户级线程(User-Level Thread)和内核线线程(Kernel-Level Thread)
+3. 线程自己不拥有系统资源
 
 ## 进程和线程
 1. 进程是正在运行的程序的实例,进程是内核分配资源的最基本的单元,而线程是内核执行的最基本的单元,进程内可以包含多个线程
