调整加密解密、

--- a/Notes/字符串加密解密.md
+++ b/Notes/字符串加密解密.md
@@ -50,7 +50,7 @@ function makeSign($params, $key)
 ```
 
 ## 其他说明
-对于用户的请求，最好生成不同的密钥
+对于不同用户的请求，最好根据用户生成不同的密钥
 
 ## 更多
 http://php.net/manual/zh/openssl.installation.php
