--- a/DataBase/MySQL/x1. 常见问题.md
+++ b/DataBase/MySQL/x1. 常见问题.md
@@ -21,5 +21,18 @@ e. 添加缓存机制，比如memcached，apc等。
 f. 不经常改动的页面，生成静态页面。
 g. 书写高效率的SQL。比如 SELECT * FROM TABEL 改为 SELECT field_1, field_2, field_3 FROM TABLE.
 ```
+### 数据库单表由万级变成亿级，怎么处理？迁移的注意点？
+
+### 举个你们使用事务的例子，以及遇到的问题？
+
+### 一条SQL查询语句是如何执行的?
+
+### B+树的原理？索引什么时候会失效变成全表扫描？
+
+### mysql死锁的条件及应对措施
+
+
+
 ## 参考资料
+
 * [MySQL存储引擎MyISAM与InnoDB区别总结整理](http://blog.csdn.net/xlgen157387/article/details/68978320)
