--- a/DataBase/MySQL/Note/数据库锁.md
+++ b/DataBase/MySQL/Note/数据库锁.md
@@ -1,8 +1,16 @@
-## 问题
-
-mysql死锁的条件及应对措施
+## 基础知识
 
 
 
 https://mp.weixin.qq.com/s/tmkRAmc1M_Y23ynduBeP3Q
+
+
+
+## 问题
+
+#### mysql死锁的条件及应对措施
+
+
+
+#### MySQL的表锁&行锁&乐观锁&悲观锁,各自的使用场景
 
