--- a/Docker/常见问题/常见问题.md
+++ b/Docker/常见问题/常见问题.md
@@ -29,7 +29,10 @@ FLUSH PRIVILEGES;
    
 3. docker run --name phpadmin --link mysql:db -p 9998:80 -d phpmyadmin/phpmyadmin
 
-### 报错：Get https://registry-1.docker.io/v2/: net/http: request canceled while waiting for connection (Client.Timeout exceeded while awaiting headers)
+### 报错：lient.Timeout exceeded while awaiting headers
+
+Get https://registry-1.docker.io/v2/: net/http: request canceled while waiting for connection (Client.Timeout exceeded while awaiting headers)
+
 阿里云加速器有问题，更换加速器DaoCloud
 
 ### docker-compose vs docker run
@@ -58,6 +61,8 @@ RUN /bin/bash -c "source /root/.bashrc"
 ### 在分配的测试机（Docker容器）上启了Docker服务，测试机挂掉。
 原因：在Docker容器上不能直接启用Docker服务
 解决方案是：Docker in Docker，实现在Docker容器中启动一个子容器。
+
+
 
 ## 参考资料
 * [docker错误一览](https://www.jianshu.com/p/605a7c0e1d0f)
