--- a/Architecture/Kubernetes/安装.md
+++ b/Architecture/Kubernetes/安装.md
@@ -1,1 +1,16 @@
+安装教程
+
 https://github.com/AliyunContainerService/k8s-for-docker-desktop
+
+
+
+Window10使用Minikube快速搭建Kubernetes环境
+
+```
+minikube start --vm-driver=hyperv --hyperv-virtual-switch=Switch --v=3 --alsologtostderr --registry-mirror=https://registry.docker-cn.com
+```
+
+## 相关资料
+1. https://medium.com/@JockDaRock/minikube-on-windows-10-with-hyper-v-6ef0f4dc158c
+
+2. https://yalishizhude.github.io/2017/12/15/minikube-setup/
