--- a/PHP/常见问题/常见问题.md
+++ b/PHP/常见问题/常见问题.md
@@ -1,5 +1,3 @@
-# 常见问题
-
 ## 如何共享session
 
 
@@ -59,3 +57,7 @@ empty 如果 var 是非空或非零的值，则 empty() 返回 FALSE。换句话
 如果变量为 0 ，则empty()会返回TRUE，isset()会返回TRUE；  
 如果变量为空字符串，则empty()会返回TRUE，isset()会返回TRUE；  
 如果变量未定义，则empty()会返回TRUE，isset()会返回FLASE。   
+
+## MySQL、PHP按周统计数据跨年问题（oW %x%v）
+
+http://xmyl.me/archives/148.html
