--- a/Notes/编码/参考资料.md
+++ b/Notes/编码/参考资料.md
@@ -1,8 +1,4 @@
-## 代码
-
-## 代码规范
-
-## 书籍推荐
+## 参考资料
 * [代码整洁之道](https://book.douban.com/subject/4199741/)
 * [重构](https://book.douban.com/subject/4262627/)
 
