--- a/Data/DataStructure/数据结构/5. 栈.md
+++ b/Data/DataStructure/数据结构/5. 栈.md
@@ -4,4 +4,10 @@
 1. 栈也是一种数据呈线性排列的数据结构
 2. 我们只能访问最新添加的数据
 3. 栈就像是一摞书，拿到新书时我们会把它放在书堆的最上面，取书时也只能从最上面的新书开始取。
-4. 后进先出
+4. 栈就是在线性表的基础上加了这样的操作限制条件：后面添加的数据，在删除的时候必须先删除，即通常所说的“后进先出”。
+
+
+
+## 说明
+
+1、队列是先进先出，栈是后进先出
