--- a/Architecture/分布式/数据一致性.md
+++ b/Architecture/分布式/数据一致性.md
@@ -18,7 +18,7 @@
 
 
 
-## **方案**
+## **考虑**
 
 **强一致性**
 
@@ -36,7 +36,21 @@
 
 业务逻辑无法保证幂等，则要增加一个去重表或者类似的实现：发消息的时候消息并不立即发出，而是向消息库插入一条消息记录，然后在事务提交的时候再异步将消息发出，发送消息如果成功则将消息库里的消息删除
 
-补偿机制：重试 或 回滚
+
+
+## 方案
+
+#### 两阶段
+
+#### 补偿型：重试 或 回滚
+
+WS-BusinessActivity提供了一种基于补偿的long-running的事务处理模型。还是上面的例子，服务器A的事务如果执行顺利，那么事务A就先行提交，如果事务B也执行顺利，则事务B也提交，整个事务就算完成。但是如果事务B执行失败，事务B本身回滚，这时事务A已经被提交，所以需要执行一个补偿操作，将已经提交的事务A执行的操作作反操作，恢复到未执行前事务A的状态。这样的SAGA事务模型，是牺牲了一定的隔离性和一致性的，但是提高了long-running事务的可用性。
+
+
+
+#### 异步确保型
+
+将一些同步阻塞的事务操作变为异步的操作，避免对数据库事务的争用，典型例子是热点账户异步记账、批量记账的处理。
 
 
 
