--- a/Architecture/架构基础/高可用.md
+++ b/Architecture/架构基础/高可用.md
@@ -10,3 +10,12 @@
 服务层：负载均衡，分级管理，快速失败（超时设置），异步调用，服务降级，幂等设计等。
 
 数据层：冗余备份（冷，热备[同步，异步]，温备），失效转移（确认，转移，恢复）。数据高可用方面著名的理论基础是CAP理论（持久性，可用性，数据一致性[强一致，用户一致，最终一致]）
+
+## 冗余
+
+只有一个单点，挂了服务会受影响；如果有冗余备份，挂了还有其他backup能够顶上。
+
+
+
+## 服务降级
+
