--- a/DataBase/MySQL/事务和锁/表锁&行锁.md
+++ b/DataBase/MySQL/事务和锁/表锁&行锁.md
@@ -9,6 +9,9 @@ InnoDB 实现了以下两种类型的**行锁**：
 
 ### 行锁
 锁定一行数据，即上面所说的共享锁和排他锁
+
+InnoDB是基于索引来完成行锁
+
 ### 间隙锁
 锁定一个范围，但不包含记录本身。例如数据库中数据id为3，8，11，那么锁定的区间可能为（-∞,3），(3,8)(8,11)，(11,+∞)，假如插入的数据为6，那此时锁定的区间为(3,6)，(6,8)被锁定，不包括要插入的6.
 ### 行锁 + 间隙锁
