--- a/Architecture/DDD/参考资料.md
+++ b/Architecture/DDD/参考资料.md
@@ -1,1 +1,5 @@
 https://www.cnblogs.com/davenkin/p/ddd-coding-practices.html
+
+领域驱动设计在美团点评业务系统的实践
+
+https://mp.weixin.qq.com/s/y87u9oyx3Sty4rbmulqWfA
