--- a/DataBase/Redis/数据结构/键值.md
+++ b/DataBase/Redis/数据结构/键值.md
@@ -4,7 +4,25 @@
 
 同一个哈希桶中的多个元素用一个链表来保存，它们之间一次用指针连接。
 
+## 问题
 
+哈希冲突上的元素只能通过指针逐一查找
+
+## Rehash
+
+增加现有hash桶数量
+
+1、给哈希表2分配更大的空间
+
+2、把哈希表1中数据重新映射并拷贝到哈希表2中
+
+3、释放哈希表1的空间
+
+比如之前是%4，改成%8
+
+## 渐进式rehash(新的问题：造成阻塞)
+
+追加在后面，顺序处理哈希表1的数据
 
 ![img](assets/73fb212d0b0928d96a0d7d6ayy76da0c.jpg)
 
