--- a/Data/DataStructure/数据结构/7. 哈希表.md
+++ b/Data/DataStructure/数据结构/7. 哈希表.md
@@ -2,7 +2,14 @@
 ## 定义
 散列表（Hash table，也叫哈希表），是根据键（Key）而直接访问在内存存储位置的数据结构
 
+这个映射函数叫做[散列函数](https://link.zhihu.com/?target=https%3A//baike.baidu.com/item/%E6%95%A3%E5%88%97%E5%87%BD%E6%95%B0/2366288)，存放记录的[数组](https://link.zhihu.com/?target=https%3A//baike.baidu.com/item/%E6%95%B0%E7%BB%84/3794097)叫做[散列表](https://link.zhihu.com/?target=https%3A//baike.baidu.com/item/%E6%95%A3%E5%88%97%E8%A1%A8/10027933)。
+
+
+
 ## 理解
 1. 对不同的关键字可能得到同一散列地址，即 x≠y，而 f(x)=f(y)，这种现象称为冲突, 如果发生哈希冲突，就使用链表进行存储。
 2. 示例：一个按照人名首字母顺序排列的表，存放首字母的表对应哈希表
 
+## 应用
+
+redis、memcache
