--- a/Data/DataStructure/数据结构/8. 堆.md
+++ b/Data/DataStructure/数据结构/8. 堆.md
@@ -1,4 +1,24 @@
 ## 定义
 
-## 理解
-1. 堆中最顶端的数据始终最小，无论数据量多少，取出最小值的时间负责度都为O(1)
+堆是完全二叉树
+
+母节点的值比子节点大或小
+
+
+
+## 属性
+
+堆分为两种：*最大堆*和*最小堆*，两者的差别在于节点的排序方式。
+
+
+
+## 数据结构
+
+
+
+## 插入过程
+
+1、放到底部
+
+
+
