--- a/DataBase/MySQL/事务和锁/数据库锁.md
+++ b/DataBase/MySQL/事务和锁/数据库锁.md
@@ -2,6 +2,13 @@
 
 
 
+| 锁模式分类 | 乐观锁、悲观锁         |
+| ---------- | ---------------------- |
+| 范围锁     | 行锁、表锁             |
+| 算法锁     | 临间锁、间隙锁、记录锁 |
+| 属性锁     | 共享锁、排他锁         |
+| 状态锁     | 意向共享锁、意向排他锁 |
+
 https://mp.weixin.qq.com/s/tmkRAmc1M_Y23ynduBeP3Q
 
 
