--- a/Data/DataStructure/数据结构/9. 树.md
+++ b/Data/DataStructure/数据结构/9. 树.md
@@ -1,6 +1,13 @@
 ## 定义
 
+树状结构：是一种以层次结构式的构造性质
+
+二叉树：每个节点最多只有两个分支的树结构
+
+完全二叉树：除了最后一层，都是满的。最后一层是右边缺少若干节点，则成为完全二叉树。
+
 ## 性质
+
 1. 每个结点的值均大于其左子树任意一个结点的值
 2. 每个结点的值均小于其右子树任意一个结点的值
 
@@ -8,3 +15,4 @@
 如果删除的结点有两个子结点，那么先删除目标结点，然后在被删除结点的左子树中寻找最大结点，最后将最大结点移到被删除结点。
 
 ## 
+
