--- a/DataBase/MySQL/事务和锁/乐观锁&悲观锁.md
+++ b/DataBase/MySQL/事务和锁/乐观锁&悲观锁.md
@@ -4,7 +4,9 @@
 
 
 
-## 乐观锁
+## 使用方式划分
+
+### 乐观锁
 
 ****
 
@@ -18,16 +20,9 @@ set value=2,version=version+1
 where id=#{id} and version=#{version}
 ```
 
-## 悲观锁
+#### 悲观锁
 
 悲观锁就是在操作数据时，认为此操作会出现数据冲突，所以在进行每次操作时都要通过获取锁才能进行对相同数据的操作
 
-### 共享锁
 
-共享锁又称读锁 (read lock)，是读取操作创建的锁。其他用户可以并发读取数据，但任何事务都不能对数据进行修改（获取数据上的排他锁），直到已释放所有共享锁。当如果事务对读锁进行修改操作，很可能会造成死锁。如下图所示。
-
-### 排它锁
-
-排他锁 exclusive lock（也叫writer lock）又称写锁。
- 名词解释：若某个事物对某一行加上了排他锁，只能这个事务对其进行读写，在此事务结束之前，其他事务不能对其进行加任何锁，其他进程可以读取,不能进行写操作，需等待其释放。 **排它锁是悲观锁的一种实现**，在上面悲观锁也介绍过。
 
