--- a/DataBase/MySQL/事务和锁/表锁&行锁.md
+++ b/DataBase/MySQL/事务和锁/表锁&行锁.md
@@ -7,15 +7,42 @@ InnoDB 实现了以下两种类型的**行锁**：
 
 ## 锁的分类
 
+## 全局锁
+
+备份
+
 ### 行锁
+
 锁定一行数据，即上面所说的共享锁和排他锁
 
 InnoDB是基于索引来完成行锁
 
-### 间隙锁
-锁定一个范围，但不包含记录本身。例如数据库中数据id为3，8，11，那么锁定的区间可能为（-∞,3），(3,8)(8,11)，(11,+∞)，假如插入的数据为6，那此时锁定的区间为(3,6)，(6,8)被锁定，不包括要插入的6.
-### 行锁 + 间隙锁
-锁定一个范围，包括记录本身，例如数据库中数据id为3，8，11，那么锁定的区间可能为（-∞,3]，(3,8](8,11]，(11,+∞]，假如插入的数据为6，此时锁定的区间(3,8]变为(3,6]，(6,8]两个部分，可以看到，6也被锁定。
+
+
+## 行锁的模式
+
+锁的模式有：共享锁，排他锁，意向共享锁，意向排他锁
+
+#### 共享锁
+
+共享锁又称读锁 (read lock)，是读取操作创建的锁。其他用户可以并发读取数据，但任何事务都不能对数据进行修改（获取数据上的排他锁），直到已释放所有共享锁。当如果事务对读锁进行修改操作，很可能会造成死锁。如下图所示。
+
+#### 排它锁
+
+排他锁 exclusive lock（也叫writer lock）又称写锁。
+ 名词解释：若某个事物对某一行加上了排他锁，只能这个事务对其进行读写，在此事务结束之前，其他事务不能对其进行加任何锁，其他进程可以读取,不能进行写操作，需等待其释放。 **排它锁是悲观锁的一种实现**，在上面悲观锁也介绍过。
+
+
+
+#### **意向共享锁（IS）：**
+
+事务打算给数据行加行共享锁，事务在给一个数据行加共享锁前必须先取得该表的IS锁。
+
+#### **意向排他锁（IX）：**
+
+事务打算给数据行加行排他锁，事务在给一个数据行加排他锁前必须先取得该表的IX锁。
+
+
 
 ## 锁的应用
 
